y.output
Terminals unused in grammar

   DOS_PUNT


Gramática

    0 $accept: inicio $end

    1 inicio: programa

    2 programa: sentencia
    3         | programa sentencia

    4 sentencia: dec_var
    5          | impresion
    6          | lectura
    7          | condicional
    8          | iteracion
    9          | asignacion

   10 dec_var: DIM COR_A lista_simetrica COR_C

   11 lista_simetrica: ID COMA lista_simetrica COMA tipo_dato
   12                | ID COR_C AS COR_A tipo_dato

   13 tipo_dato: T_INT
   14          | T_FLOAT
   15          | T_STRING

   16 asignacion: lista_de_asignaciones OP_ASIG expresion

   17 lista_de_asignaciones: ID
   18                      | lista_de_asignaciones OP_ASIG ID

   19 impresion: DISPLAY ID
   20          | DISPLAY constante

   21 lectura: GET ID

   22 condicional: IF PA condicion PC THEN programa ELSE programa ENDIF
   23            | IF PA equ PC THEN programa ENDIF
   24            | IF PA equ PC THEN programa ELSE programa ENDIF

   25 equ: EQUMAX PA expresion PYC COR_A lista_factores COR_C PC
   26    | EQUMIN PA expresion PYC COR_A lista_factores COR_C PC

   27 lista_factores: equfactor
   28               | lista_factores COMA equfactor

   29 equfactor: constante_num
   30          | ID

   31 condicional: IF PA condicion PC THEN programa ENDIF

   32 iteracion: WHILE PA condicion PC programa ENDWHILE

   33 condicion: OP_NOT condicion_simple
   34          | condicion_multiple
   35          | condicion_simple

   36 condicion_multiple: comparacion OP_AND comparacion
   37                   | comparacion OP_OR comparacion

   38 condicion_simple: comparacion

   39 comparacion: expresion comparador expresion

   40 comparador: OP_MEN
   41           | OP_MAY
   42           | OP_MEN_IG
   43           | OP_MAY_IG
   44           | OP_IGUAL
   45           | OP_DIST

   46 expresion: expresion OP_SUM termino
   47          | expresion OP_RES termino
   48          | termino
   49          | LONG PA COR_A lista_id COR_C PC
   50          | OP_RES expresion

   51 lista_id: ID
   52         | lista_id COMA ID

   53 termino: termino OP_MULT factor
   54        | termino OP_DIV factor
   55        | factor

   56 factor: PA expresion PC
   57       | constante
   58       | ID

   59 constante: constante_num
   60          | CTE_STRING

   61 constante_num: CTE_ENT
   62              | CTE_REAL


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
WHILE (258) 32
ENDWHILE (259) 32
IF (260) 22 23 24 31
THEN (261) 22 23 24 31
ELSE (262) 22 24
ENDIF (263) 22 23 24 31
GET (264) 21
DISPLAY (265) 19 20
DIM (266) 10
AS (267) 12
T_INT (268) 13
T_FLOAT (269) 14
T_STRING (270) 15
EQUMAX (271) 25
EQUMIN (272) 26
LONG (273) 49
ID (274) 11 12 17 18 19 21 30 51 52 58
CTE_STRING (275) 60
CTE_ENT (276) 61
CTE_REAL (277) 62
OP_SUM (278) 46
OP_RES (279) 47 50
OP_MULT (280) 53
OP_DIV (281) 54
OP_ASIG (282) 16 18
OP_MAY (283) 41
OP_MAY_IG (284) 43
OP_MEN (285) 40
OP_MEN_IG (286) 42
OP_IGUAL (287) 44
OP_DIST (288) 45
OP_AND (289) 36
OP_OR (290) 37
OP_NOT (291) 33
PA (292) 22 23 24 25 26 31 32 49 56
PC (293) 22 23 24 25 26 31 32 49 56
PYC (294) 25 26
COMA (295) 11 28 52
DOS_PUNT (296)
COR_A (297) 10 12 25 26 49
COR_C (298) 10 12 25 26 49
MENOS_UNARIO (299)


No terminales con las reglas donde aparecen

$accept (45)
    en la izquierda: 0
inicio (46)
    en la izquierda: 1, en la derecha: 0
programa (47)
    en la izquierda: 2 3, en la derecha: 1 3 22 23 24 31 32
sentencia (48)
    en la izquierda: 4 5 6 7 8 9, en la derecha: 2 3
dec_var (49)
    en la izquierda: 10, en la derecha: 4
lista_simetrica (50)
    en la izquierda: 11 12, en la derecha: 10 11
tipo_dato (51)
    en la izquierda: 13 14 15, en la derecha: 11 12
asignacion (52)
    en la izquierda: 16, en la derecha: 9
lista_de_asignaciones (53)
    en la izquierda: 17 18, en la derecha: 16 18
impresion (54)
    en la izquierda: 19 20, en la derecha: 5
lectura (55)
    en la izquierda: 21, en la derecha: 6
condicional (56)
    en la izquierda: 22 23 24 31, en la derecha: 7
equ (57)
    en la izquierda: 25 26, en la derecha: 23 24
lista_factores (58)
    en la izquierda: 27 28, en la derecha: 25 26 28
equfactor (59)
    en la izquierda: 29 30, en la derecha: 27 28
iteracion (60)
    en la izquierda: 32, en la derecha: 8
condicion (61)
    en la izquierda: 33 34 35, en la derecha: 22 31 32
condicion_multiple (62)
    en la izquierda: 36 37, en la derecha: 34
condicion_simple (63)
    en la izquierda: 38, en la derecha: 33 35
comparacion (64)
    en la izquierda: 39, en la derecha: 36 37 38
comparador (65)
    en la izquierda: 40 41 42 43 44 45, en la derecha: 39
expresion (66)
    en la izquierda: 46 47 48 49 50, en la derecha: 16 25 26 39 46
    47 50 56
lista_id (67)
    en la izquierda: 51 52, en la derecha: 49 52
termino (68)
    en la izquierda: 53 54 55, en la derecha: 46 47 48 53 54
factor (69)
    en la izquierda: 56 57 58, en la derecha: 53 54 55
constante (70)
    en la izquierda: 59 60, en la derecha: 20 57
constante_num (71)
    en la izquierda: 61 62, en la derecha: 29 59


estado 0

    0 $accept: . inicio $end

    WHILE    desplazar e ir al estado 1
    IF       desplazar e ir al estado 2
    GET      desplazar e ir al estado 3
    DISPLAY  desplazar e ir al estado 4
    DIM      desplazar e ir al estado 5
    ID       desplazar e ir al estado 6

    inicio                 ir al estado 7
    programa               ir al estado 8
    sentencia              ir al estado 9
    dec_var                ir al estado 10
    asignacion             ir al estado 11
    lista_de_asignaciones  ir al estado 12
    impresion              ir al estado 13
    lectura                ir al estado 14
    condicional            ir al estado 15
    iteracion              ir al estado 16


estado 1

   32 iteracion: WHILE . PA condicion PC programa ENDWHILE

    PA  desplazar e ir al estado 17


estado 2

   22 condicional: IF . PA condicion PC THEN programa ELSE programa ENDIF
   23            | IF . PA equ PC THEN programa ENDIF
   24            | IF . PA equ PC THEN programa ELSE programa ENDIF
   31            | IF . PA condicion PC THEN programa ENDIF

    PA  desplazar e ir al estado 18


estado 3

   21 lectura: GET . ID

    ID  desplazar e ir al estado 19


estado 4

   19 impresion: DISPLAY . ID
   20          | DISPLAY . constante

    ID          desplazar e ir al estado 20
    CTE_STRING  desplazar e ir al estado 21
    CTE_ENT     desplazar e ir al estado 22
    CTE_REAL    desplazar e ir al estado 23

    constante      ir al estado 24
    constante_num  ir al estado 25


estado 5

   10 dec_var: DIM . COR_A lista_simetrica COR_C

    COR_A  desplazar e ir al estado 26


estado 6

   17 lista_de_asignaciones: ID .

    $default  reduce usando la regla 17 (lista_de_asignaciones)


estado 7

    0 $accept: inicio . $end

    $end  desplazar e ir al estado 27


estado 8

    1 inicio: programa .
    3 programa: programa . sentencia

    WHILE    desplazar e ir al estado 1
    IF       desplazar e ir al estado 2
    GET      desplazar e ir al estado 3
    DISPLAY  desplazar e ir al estado 4
    DIM      desplazar e ir al estado 5
    ID       desplazar e ir al estado 6

    $default  reduce usando la regla 1 (inicio)

    sentencia              ir al estado 28
    dec_var                ir al estado 10
    asignacion             ir al estado 11
    lista_de_asignaciones  ir al estado 12
    impresion              ir al estado 13
    lectura                ir al estado 14
    condicional            ir al estado 15
    iteracion              ir al estado 16


estado 9

    2 programa: sentencia .

    $default  reduce usando la regla 2 (programa)


estado 10

    4 sentencia: dec_var .

    $default  reduce usando la regla 4 (sentencia)


estado 11

    9 sentencia: asignacion .

    $default  reduce usando la regla 9 (sentencia)


estado 12

   16 asignacion: lista_de_asignaciones . OP_ASIG expresion
   18 lista_de_asignaciones: lista_de_asignaciones . OP_ASIG ID

    OP_ASIG  desplazar e ir al estado 29


estado 13

    5 sentencia: impresion .

    $default  reduce usando la regla 5 (sentencia)


estado 14

    6 sentencia: lectura .

    $default  reduce usando la regla 6 (sentencia)


estado 15

    7 sentencia: condicional .

    $default  reduce usando la regla 7 (sentencia)


estado 16

    8 sentencia: iteracion .

    $default  reduce usando la regla 8 (sentencia)


estado 17

   32 iteracion: WHILE PA . condicion PC programa ENDWHILE

    LONG        desplazar e ir al estado 30
    ID          desplazar e ir al estado 31
    CTE_STRING  desplazar e ir al estado 21
    CTE_ENT     desplazar e ir al estado 22
    CTE_REAL    desplazar e ir al estado 23
    OP_RES      desplazar e ir al estado 32
    OP_NOT      desplazar e ir al estado 33
    PA          desplazar e ir al estado 34

    condicion           ir al estado 35
    condicion_multiple  ir al estado 36
    condicion_simple    ir al estado 37
    comparacion         ir al estado 38
    expresion           ir al estado 39
    termino             ir al estado 40
    factor              ir al estado 41
    constante           ir al estado 42
    constante_num       ir al estado 25


estado 18

   22 condicional: IF PA . condicion PC THEN programa ELSE programa ENDIF
   23            | IF PA . equ PC THEN programa ENDIF
   24            | IF PA . equ PC THEN programa ELSE programa ENDIF
   31            | IF PA . condicion PC THEN programa ENDIF

    EQUMAX      desplazar e ir al estado 43
    EQUMIN      desplazar e ir al estado 44
    LONG        desplazar e ir al estado 30
    ID          desplazar e ir al estado 31
    CTE_STRING  desplazar e ir al estado 21
    CTE_ENT     desplazar e ir al estado 22
    CTE_REAL    desplazar e ir al estado 23
    OP_RES      desplazar e ir al estado 32
    OP_NOT      desplazar e ir al estado 33
    PA          desplazar e ir al estado 34

    equ                 ir al estado 45
    condicion           ir al estado 46
    condicion_multiple  ir al estado 36
    condicion_simple    ir al estado 37
    comparacion         ir al estado 38
    expresion           ir al estado 39
    termino             ir al estado 40
    factor              ir al estado 41
    constante           ir al estado 42
    constante_num       ir al estado 25


estado 19

   21 lectura: GET ID .

    $default  reduce usando la regla 21 (lectura)


estado 20

   19 impresion: DISPLAY ID .

    $default  reduce usando la regla 19 (impresion)


estado 21

   60 constante: CTE_STRING .

    $default  reduce usando la regla 60 (constante)


estado 22

   61 constante_num: CTE_ENT .

    $default  reduce usando la regla 61 (constante_num)


estado 23

   62 constante_num: CTE_REAL .

    $default  reduce usando la regla 62 (constante_num)


estado 24

   20 impresion: DISPLAY constante .

    $default  reduce usando la regla 20 (impresion)


estado 25

   59 constante: constante_num .

    $default  reduce usando la regla 59 (constante)


estado 26

   10 dec_var: DIM COR_A . lista_simetrica COR_C

    ID  desplazar e ir al estado 47

    lista_simetrica  ir al estado 48


estado 27

    0 $accept: inicio $end .

    $default  aceptar


estado 28

    3 programa: programa sentencia .

    $default  reduce usando la regla 3 (programa)


estado 29

   16 asignacion: lista_de_asignaciones OP_ASIG . expresion
   18 lista_de_asignaciones: lista_de_asignaciones OP_ASIG . ID

    LONG        desplazar e ir al estado 30
    ID          desplazar e ir al estado 49
    CTE_STRING  desplazar e ir al estado 21
    CTE_ENT     desplazar e ir al estado 22
    CTE_REAL    desplazar e ir al estado 23
    OP_RES      desplazar e ir al estado 32
    PA          desplazar e ir al estado 34

    expresion      ir al estado 50
    termino        ir al estado 40
    factor         ir al estado 41
    constante      ir al estado 42
    constante_num  ir al estado 25


estado 30

   49 expresion: LONG . PA COR_A lista_id COR_C PC

    PA  desplazar e ir al estado 51


estado 31

   58 factor: ID .

    $default  reduce usando la regla 58 (factor)


estado 32

   50 expresion: OP_RES . expresion

    LONG        desplazar e ir al estado 30
    ID          desplazar e ir al estado 31
    CTE_STRING  desplazar e ir al estado 21
    CTE_ENT     desplazar e ir al estado 22
    CTE_REAL    desplazar e ir al estado 23
    OP_RES      desplazar e ir al estado 32
    PA          desplazar e ir al estado 34

    expresion      ir al estado 52
    termino        ir al estado 40
    factor         ir al estado 41
    constante      ir al estado 42
    constante_num  ir al estado 25


estado 33

   33 condicion: OP_NOT . condicion_simple

    LONG        desplazar e ir al estado 30
    ID          desplazar e ir al estado 31
    CTE_STRING  desplazar e ir al estado 21
    CTE_ENT     desplazar e ir al estado 22
    CTE_REAL    desplazar e ir al estado 23
    OP_RES      desplazar e ir al estado 32
    PA          desplazar e ir al estado 34

    condicion_simple  ir al estado 53
    comparacion       ir al estado 54
    expresion         ir al estado 39
    termino           ir al estado 40
    factor            ir al estado 41
    constante         ir al estado 42
    constante_num     ir al estado 25


estado 34

   56 factor: PA . expresion PC

    LONG        desplazar e ir al estado 30
    ID          desplazar e ir al estado 31
    CTE_STRING  desplazar e ir al estado 21
    CTE_ENT     desplazar e ir al estado 22
    CTE_REAL    desplazar e ir al estado 23
    OP_RES      desplazar e ir al estado 32
    PA          desplazar e ir al estado 34

    expresion      ir al estado 55
    termino        ir al estado 40
    factor         ir al estado 41
    constante      ir al estado 42
    constante_num  ir al estado 25


estado 35

   32 iteracion: WHILE PA condicion . PC programa ENDWHILE

    PC  desplazar e ir al estado 56


estado 36

   34 condicion: condicion_multiple .

    $default  reduce usando la regla 34 (condicion)


estado 37

   35 condicion: condicion_simple .

    $default  reduce usando la regla 35 (condicion)


estado 38

   36 condicion_multiple: comparacion . OP_AND comparacion
   37                   | comparacion . OP_OR comparacion
   38 condicion_simple: comparacion .

    OP_AND  desplazar e ir al estado 57
    OP_OR   desplazar e ir al estado 58

    $default  reduce usando la regla 38 (condicion_simple)


estado 39

   39 comparacion: expresion . comparador expresion
   46 expresion: expresion . OP_SUM termino
   47          | expresion . OP_RES termino

    OP_SUM     desplazar e ir al estado 59
    OP_RES     desplazar e ir al estado 60
    OP_MAY     desplazar e ir al estado 61
    OP_MAY_IG  desplazar e ir al estado 62
    OP_MEN     desplazar e ir al estado 63
    OP_MEN_IG  desplazar e ir al estado 64
    OP_IGUAL   desplazar e ir al estado 65
    OP_DIST    desplazar e ir al estado 66

    comparador  ir al estado 67


estado 40

   48 expresion: termino .
   53 termino: termino . OP_MULT factor
   54        | termino . OP_DIV factor

    OP_MULT  desplazar e ir al estado 68
    OP_DIV   desplazar e ir al estado 69

    $default  reduce usando la regla 48 (expresion)


estado 41

   55 termino: factor .

    $default  reduce usando la regla 55 (termino)


estado 42

   57 factor: constante .

    $default  reduce usando la regla 57 (factor)


estado 43

   25 equ: EQUMAX . PA expresion PYC COR_A lista_factores COR_C PC

    PA  desplazar e ir al estado 70


estado 44

   26 equ: EQUMIN . PA expresion PYC COR_A lista_factores COR_C PC

    PA  desplazar e ir al estado 71


estado 45

   23 condicional: IF PA equ . PC THEN programa ENDIF
   24            | IF PA equ . PC THEN programa ELSE programa ENDIF

    PC  desplazar e ir al estado 72


estado 46

   22 condicional: IF PA condicion . PC THEN programa ELSE programa ENDIF
   31            | IF PA condicion . PC THEN programa ENDIF

    PC  desplazar e ir al estado 73


estado 47

   11 lista_simetrica: ID . COMA lista_simetrica COMA tipo_dato
   12                | ID . COR_C AS COR_A tipo_dato

    COMA   desplazar e ir al estado 74
    COR_C  desplazar e ir al estado 75


estado 48

   10 dec_var: DIM COR_A lista_simetrica . COR_C

    COR_C  desplazar e ir al estado 76


estado 49

   18 lista_de_asignaciones: lista_de_asignaciones OP_ASIG ID .
   58 factor: ID .

    OP_ASIG   reduce usando la regla 18 (lista_de_asignaciones)
    $default  reduce usando la regla 58 (factor)


estado 50

   16 asignacion: lista_de_asignaciones OP_ASIG expresion .
   46 expresion: expresion . OP_SUM termino
   47          | expresion . OP_RES termino

    OP_SUM  desplazar e ir al estado 59
    OP_RES  desplazar e ir al estado 60

    $default  reduce usando la regla 16 (asignacion)


estado 51

   49 expresion: LONG PA . COR_A lista_id COR_C PC

    COR_A  desplazar e ir al estado 77


estado 52

   46 expresion: expresion . OP_SUM termino
   47          | expresion . OP_RES termino
   50          | OP_RES expresion .

    $default  reduce usando la regla 50 (expresion)


estado 53

   33 condicion: OP_NOT condicion_simple .

    $default  reduce usando la regla 33 (condicion)


estado 54

   38 condicion_simple: comparacion .
